# Thrift

./: .gitignore
ThriftExample/: Client  Server  display.thrift  displayClient.cpp  displayServer.cpp
ThriftExample/gen-cpp/: display.cpp  display.h  display_constants.cpp  display_constants.h  display_server.skeleton.cpp  display_types.cpp  display_types.h
Weather/: Client  Server  weather.thrift  weather_client.cpp  weather_server.cpp
Weather/gen-cpp/: WeatherService.h  weather_constants.h  weather_types.h
WeatherClient/: CMakeLists.txt  WeatherManager.cpp  WeatherManager.h  main.cpp  main.qml
WeatherClient/gen-cpp/: WeatherService.cpp  WeatherService_server.skeleton.cpp  weather_constants.cpp  weather_types.cpp
thrift_example-sir/: Client  Server  ThriftCommands.txt  calculator.thrift  calculatorClient.cpp  calculatorServer.cpp
thrift_example-sir/gen-cpp/: Calculator.cpp  Calculator.h  Calculator_server.skeleton.cpp
